--- a/www/css/style.css
+++ b/www/css/style.css
@@ -183,14 +183,16 @@ html, body {
 /* ------------ Info block ------------ */
 
 #duration{
-	color: white;
-	position: absolute;
-	left: 0;
-	width: 300px;
-	height: 500px;
-	white-space: pre-wrap;       /* css-3 */
-	word-wrap: break-word;       /* Internet Explorer 5.5+ */
-	word-break: break-all;
+    width: 100%;
+    height: 40px;
+    position: absolute;
+    bottom: 90px;
+    left: 0;
+    display: table-cell;
+    font-family: bahnschrift;
+    font-size: 20px;
+    font-weight: 400;
+    color: #b3b1ca;
 }
 
 #gifcanvas{
@@ -222,6 +224,11 @@ html, body {
 	display: block;
 }
 
+@font-face{
+	font-family: "bahnschrift";
+    src: url("../font/bahnschrift.ttf");
+}
+
 /* ------------ Debug class to visualize block areas ------------ */
 .debug{
 	background-color: rgba(255, 255, 255, 0.5) !important;
@@ -243,6 +250,8 @@ html, body {
 	width: 100% !important;
 	height: 100% !important;	
 	z-index:300;
+	padding: 10px !important;
+    margin: -10px 0 0 -10px !important;
 }
 
 #cropHandlesHolder{
@@ -262,19 +271,23 @@ html, body {
 #cropBBHandle1{
 	top: -10px;
 	left: -10px;
+	z-index:400;
 }
 
 #cropBBHandle2{
 	top: -10px;
 	right: -10px;
+	z-index:400;
 }
 
 #cropBBHandle3{
 	bottom: -10px;
 	left: -10px;
+	z-index:400;
 }
 
 #cropBBHandle4{
 	bottom: -10px;
 	right: -10px;
+	z-index:400;
 }
